# docs/swagger.yaml
@@ -27,6 +27,15 @@ definitions:
     - email
     - password
     type: object
+  models.UpdateUser:
+    properties:
+      bio:
+        type: string
+      image_url:
+        type: string
+      name:
+        type: string
+    type: object
   models.UserModel:
     properties:
       bio:
@@ -159,6 +168,55 @@ paths:
       summary: Register a new user
       tags:
       - Auth
+  /user/updateuser/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Update user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UpdateUser'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update user
+      tags:
+      - Users
 schemes:
 - http
 securityDefinitions:
